--- a/index.html
+++ b/index.html
@@ -99,27 +99,29 @@
 
                 <!-- Project 2 -->
                 <div class="bg-gray-900 p-6 rounded-lg">
-                    <img src="https://github.com/Girish-Parashar/Girish-Parashar.github.io/blob/main/logos/Project%202.jpg" alt="Project 2" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <img src="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/main/logos/Project%202.jpg" alt="Project 2" class="w-full h-48 object-cover rounded-lg mb-4">
                     <h3 class="text-xl font-bold">COVID-19 Insights Dashboard Using Excel</h3>
                     <p class="text-sm text-gray-400">Oct 2024 - Oct 2024</p>
                     <p class="text-sm text-gray-400">For the COVID-19 Insights Dashboard project, I used Excel to clean and analyze COVID-19 data, building an interactive dashboard to visualize cases, vaccinations, and testing rates. I applied time series analysis and forecasting for trend predictions and created a risk assessment model to categorize states by active cases and death rates, supporting resource planning.</p>
-                    <a href="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/refs/heads/main/logos/Project%202.jpg" class="text-blue-500 hover:underline">View on GitHub</a>
+                    <a href="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/main/logos/Project%202.jpg" class="text-blue-500 hover:underline">View on GitHub</a>
                 </div>
+                
                 <!-- Project 3 -->
                 <div class="bg-gray-900 p-6 rounded-lg">
-                    <img src="https://github.com/Girish-Parashar/Girish-Parashar.github.io/blob/main/logos/Project%203.jpg" alt="Project 3" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <img src="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/main/logos/Project%203.jpg" alt="Project 3" class="w-full h-48 object-cover rounded-lg mb-4">
                     <h3 class="text-xl font-bold">Manufacturing Insights using Power BI</h3>
                     <p class="text-sm text-gray-400">Oct 2024 - Oct 2024</p>
                     <p class="text-sm text-gray-400">For the Manufacturing Insights using Power BI project, I cleaned and modeled large datasets, analyzing production costs, employee performance, and resource allocation with advanced DAX. I created interactive dashboards to visualize production trends and cost efficiency, enhancing decision-making. Trend and correlation analysis, along with forecasting, supported optimized production strategies.</p>
-                    <a href="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/refs/heads/main/logos/Project%203.jpg" class="text-blue-500 hover:underline">View on GitHub</a>
+                    <a href="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/main/logos/Project%203.jpg" class="text-blue-500 hover:underline">View on GitHub</a>
                 </div>
+                
                 <!-- Project 4 -->
                 <div class="bg-gray-900 p-6 rounded-lg">
-                    <img src="https://github.com/Girish-Parashar/Girish-Parashar.github.io/blob/main/logos/Project%204.jpg" alt="Project 4" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <img src="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/main/logos/Project%204.jpg" alt="Project 4" class="w-full h-48 object-cover rounded-lg mb-4">
                     <h3 class="text-xl font-bold">Coffee Shop EDA with SQL Workbench</h3>
                     <p class="text-sm text-gray-400">Oct 2024 - Oct 2024</p>
                     <p class="text-sm text-gray-400">For the **Coffee Shop EDA with SQL Workbench** project, I analyzed sales data with SQL, uncovering monthly, weekly, and daily trends. I developed queries for sales totals, category tracking, and year-over-year comparisons, and created reports to visualize sales volume and transaction patterns. My trend analysis offered insights on seasonal variation and product popularity to aid decision-making.</p>
-                    <a href="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/refs/heads/main/logos/Project%204.jpg" class="text-blue-500 hover:underline">View on GitHub</a>
+                    <a href="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/main/logos/Project%204.jpg" class="text-blue-500 hover:underline">View on GitHub</a>
                 </div>
             </div>
         </div>
