--- a/index.html
+++ b/index.html
@@ -40,27 +40,43 @@
     <!-- Particle.js background -->
     <div id="particles-js"></div>
 
-    <!-- Header / Introduction -->
-    <!-- Introduction Section -->
+<!-- Header / Introduction -->
+<!-- Introduction Section -->
 <section id="introduction" class="flex flex-col items-center justify-center h-screen bg-gray-800 text-white relative">
     <div id="particles-js" class="absolute top-0 left-0 w-full h-full"></div>
     <div class="relative z-10 text-center">
         <img src="https://github.com/Girish-Parashar/Girish-Parashar.github.io/raw/main/Girish.jpg" alt="Girish Parashar" class="w-40 h-40 rounded-full mx-auto border-4 border-white shadow-lg">
         <h1 class="text-4xl font-bold mt-4">Girish Parashar</h1>
         <p class="text-xl mt-2">Data Analyst | AI Enthusiast | Problem Solver</p>
+        
         <a href="#contact" class="bg-blue-500 text-white px-6 py-2 mt-6 inline-block rounded hover:bg-blue-600 transition">Get in Touch</a>
+
+        <!-- Social and Resume Links -->
+        <div class="mt-6">
+            <a href="https://www.linkedin.com/in/girishparashar/" target="_blank" class="bg-blue-600 text-white px-6 py-2 mx-2 mt-4 inline-block rounded hover:bg-blue-700 transition">LinkedIn</a>
+            <a href="https://github.com/Girish-Parashar" target="_blank" class="bg-black text-white px-6 py-2 mx-2 mt-4 inline-block rounded hover:bg-gray-800 transition">GitHub</a>
+
+            <!-- Resume Download Links -->
+            <a href="https://resume.almagrow.com/shivratangirishparashar87/girish-parashar-data-analyst" target="_blank" class="bg-green-500 text-white px-6 py-2 mx-2 mt-4 inline-block rounded hover:bg-green-600 transition">Download Data Analyst Resume</a>
+            <a href="https://resume.almagrow.com/shivratangirishparashar87/girish-parashar-data-scientist" target="_blank" class="bg-purple-500 text-white px-6 py-2 mx-2 mt-4 inline-block rounded hover:bg-purple-600 transition">Download Data Scientist Resume</a>
+        </div>
     </div>
 </section>
+
 
 
     <!-- About Me -->
     <section id="about" class="py-16 bg-gray-800 text-center">
         <div class="container mx-auto">
             <h2 class="text-3xl font-bold mb-6">About Me</h2>
-            <p class="max-w-4xl mx-auto text-lg">I'm a data-driven analyst with over 1.5 years of experience transforming complex data into actionable insights. Proficient in Python, SQL, and data visualization tools, I specialize in optimizing workflows and enabling strategic decision-making through data. With a strong foundation in exploratory data analysis (EDA), feature engineering, and machine learning, I thrive on finding patterns and creating solutions that enhance business performance.My technical skillset includes hands-on experience with libraries like Pandas, NumPy, and Seaborn, as well as visualization tools such as Tableau, Power BI, and Excel. I have applied these skills across multiple projects—from building interactive dashboards for COVID-19 trends and manufacturing performance to conducting detailed analyses on customer behavior and sales in the hospitality industry. As a teaching assistant in data science, I've also supported students in understanding and applying data analysis principles, further enriching my analytical approach.
-</p>
+            <p class="max-w-4xl mx-auto text-lg text-left">
+                I'm a data-driven analyst with over 1.5 years of experience transforming complex data into actionable insights. Proficient in Python, SQL, and data visualization tools, I specialize in optimizing workflows and enabling strategic decision-making through data. With a strong foundation in exploratory data analysis (EDA), feature engineering, and machine learning, I thrive on finding patterns and creating solutions that enhance business performance. 
+                My technical skillset includes hands-on experience with libraries like Pandas, NumPy, and Seaborn, as well as visualization tools such as Tableau, Power BI, and Excel. I have applied these skills across multiple projects—from building interactive dashboards for COVID-19 trends and manufacturing performance to conducting detailed analyses on customer behavior and sales in the hospitality industry. 
+                As a teaching assistant in data science, I've also supported students in understanding and applying data analysis principles, further enriching my analytical approach.
+            </p>
         </div>
     </section>
+
 
     <!-- Experience -->
     <section id="experience" class="py-16 bg-gray-900">
