--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <h3 class="text-xl font-bold">OYO HOTEL BOOKING ANALYSIS EDA WITH TABLEAU DASHBOARD </h3>
                     <p class="text-sm text-gray-400">Jul 2023 - Aug 2023</p>
                     <p class="text-sm text-gray-400">For the **OYO Hotel Booking Analysis** project, I conducted EDA on 49,000+ records to uncover booking trends, customer behavior, and pricing strategies. Using Pandas, NumPy, Matplotlib, and Seaborn, I visualized key insights to support revenue optimization and occupancy management. Additionally, I built an interactive Tableau dashboard, enabling stakeholders to explore bookings and customer reviews for strategic decision-making.</p>
-                    <a href="https://raw.githubusercontent.com/Girish-Parashar/Girish-Parashar.github.io/main/logos/Project%201.jpg" class="text-blue-500 hover:underline">View on GitHub</a>
+                    <a href="https://github.com/Girish-Parashar/OYO-Hotel-_Booking-EDA" class="text-blue-500 hover:underline">View on GitHub</a>
                 </div>
 
                 <!-- Project 2 -->
